@@ -5,6 +5,7 @@ zeit.content.author changes
 ------------------
 
 - Fix rendering of a folder listing with authors in it (#8763).
+- Add fields ``email`` and ``status`` (#8953).
 
 
 0.1.1 (2010-08-09)
